# council

./: .editorconfig  .gitignore  .release-please-manifest.json  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  design-doc.md  release-please-config.json
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release-please.yml
cli/: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  package-lock.json  package.json  tsconfig.build.json  tsconfig.json
cli-rs/: Cargo.toml
cli-rs/src/: args.rs  council.rs  engines.rs  main.rs  process.rs  render.rs
cli/src/: args.js  args.ts  cli.ts  council.js  council.ts  delivery.js  delivery.ts  engines.js  engines.ts  exit-codes.js  index.d.ts  index.ts  interactive-ui.js  interactive-ui.ts  linear.js  linear.ts  presentation.ts  process.js  process.ts  prompt-context.js  prompt-context.ts  provider-auth.js  provider-auth.ts  render.js  render.ts  session-core.js  session-core.ts  ui.js  ui.ts  utils.js
cli/test/: args.test.js  council.test.js  delivery.test.js  engines.test.js  integration.test.js  interactive-ui.test.js  process.test.js  prompt-context.test.js  provider-auth.test.js  render.test.js
cli/test-support/: fake-clis.js
crates/council/: CHANGELOG.md  Cargo.toml  README.md
crates/council/src/: lib.rs  linear_delivery.rs  main.rs  studio.rs
web/: README.md  astro.config.mjs  package-lock.json  package.json  wrangler.jsonc
web/public/: robots.txt  site.webmanifest  sitemap.xml
web/scripts/: generate-og.mjs
(+11 files in other folders)
