[package]
name = "council"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "council"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
tempfile = "3"
regex-lite = "0.1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
